src/browser/extensions/chrome/css/theme-default.css
/* ... */
.sd-panel > .sd-header > H1,
.sd-panel > .sd-footer > H1 {
  font-size: 13px;
}

.sd-panel > .sd-header > .sd-header-title,
.sd-panel > .sd-footer > .sd-footer-title {
  margin-top: 7px;
}

#sd-queue {
  position: relative;
  overflow-y: auto;
}

.sd-clear {
  height: 0;
  clear: both;
}

.sd-loading {
  display: none;
  position: absolute;
  top: 135px;
  color: black;
  opacity: .7;
  height: 80px;
  width: 80px;
  margin-left: 50%;
  left: -40px;
}

.sd-empty {
  display: none;
  position: absolute;
  top: 150px;
  left: -100px;
  margin-left: 50%;
  width: 200px;
  color: gray;
  font-size: 13px;
  text-align: center;
  text-shadow: 1px 1px 1px rgba(150, 150, 150, .75);
  white-space: normal;
}

.sd-empty.sd-wider {
  left: -150px;
  width: 300px;
}

#sd-folder-explorer .sd-empty {
  top: 0;
  margin-top: 10px;
  padding: 5px;
  border: 1px solid #DDD;
  border-radius: 4px;
  background-color: #F9F8E9;
  color: #555;
  text-shadow: 1px 1px 1px #dadada;
  box-shadow: 1px 1px 1px #888;
}

#sd-folder-explorer .sd-empty.sd-wider {
  margin-top: 10px;
}


/* ----------------------------------------------------------------------
 *  Sorting Desk
 * ---------------------------------------------------------------------- */
.sd-bin {
  display: inline-block;
  position: relative;
  border: 2px solid #7582C9;
  background-color: #D0DDFF;
  border-radius: 8px;
  padding: 5px;
  margin: 5px 5px 5px 0;
  text-align: center;
  font-size: 13px;
  box-shadow: 1px 1px 1px 0 rgba(50, 50, 50, 0.75);
  text-shadow: 1px 1px 1px rgba(150, 150, 150, 1);
  transition: background-color 175ms, color 100ms;
  min-width: 50px;
  max-width: 200px;
  line-height: 16px;
}

.sd-bin.sd-bin-image {
  padding: 1px;
  top: 4px;
}

.sd-bin:hover:not(.sd-adding) {
  background-color: #A9BEF3;
  color: #F2F6FF;
  cursor: pointer;
  transition: background-color 175ms, color 100ms;
}

.sd-bin.sd-mousedown:not(.sd-adding),
.sd-bin.sd-assign {
  position: relative;
  top: 2px;
  left: 2px;
  box-shadow: none;
  transition: background-color 175ms, color 100ms;
}

.sd-bin.sd-bin-image.sd-mousedown:not(.sd-adding),
.sd-bin.sd-bin-image.sd-assign {
  top: 6px;
}

.sd-bin.sd-active {
  background-color: #83c78e;
  border-color: #349950;
}

.sd-bin .sd-bin-name {
  color: #5C7CCA;
}  

.sd-bin.sd-active .sd-bin-name {
  color: #E6FFD6;
}  

.sd-bin.sd-unknown {
  background-color: #d24949 !important;
  border-color: #ab4949 !important;
}

.sd-bin.sd-active:hover {
  color: #E6FFD6;
  background-color: #92E29F;
  border-color: #349950;
}

.sd-bin-browser-icon {
  position: absolute;
  width: 12px;
  height: 11px;
  top: -5px;
  right: -10px;
  display: none;
  padding: 3px;
  border: 1px solid grey;
  border-radius: 9px;
  opacity: 0;
  box-shadow: 1px 1px 1px 0 rgba(50, 50, 50, 0.75);
  transition: all 200ms;
  z-index: 1000001;
}

.sd-bin:hover .sd-bin-browser-icon:not(.sd-disabled) {
  display: block;
  background-color: white;
  opacity: 1;
}

.sd-bin-browser-icon:not(.sd-disabled):hover {
  background-color: #ececec;
}

/* Bin: name */
.sd-bin-name {
  overflow: hidden;
  text-overflow: ellipsis;
}

.sd-bin-name IMG {
  border: 0 none;
  width: auto;
  height: 24px;
  display: block;
  margin: 0;
  margin-left: auto;
  margin-right: auto;
  padding: 0;
  line-height: 0;
  border-radius: 6px;
}

/* Text item */
.sd-text-item {
  position: relative;
  margin: 15px 5px;
  padding: 10px;
  background-color: #FFFFFA;
  border: 2px solid #E0E2B6;
  border-radius: 8px;
  color: #242922;
  text-align: justify;
  font-size: 12px;
  cursor: default;
  line-height: 15px;
}

.sd-text-item B:not(:first-child),
.sd-text-item STRONG:not(:first-child) {
  padding-left: 10px;
}

.sd-text-item-content {
  overflow: hidden;
  max-height: 1000px;
  text-overflow: ellipsis;
}

.sd-text-item-content * {
  display: inline-block;
}

.sd-text-item-content A {
  color: #85B7E4;
}

.sd-text-item-content A:hover {
  color: #85B7E4;
  text-decoration: underline;
}

.sd-text-item-content A:visited {
  color: #778BBE !important;
}

.sd-text-item:hover {
  background-color: #F8F8DD;
  color: #44573C;
}

.sd-text-item:hover .sd-text-item-title {
  background-color: #F8F8DD;
}

.sd-text-item:active {
  background-color: #FFF5F8;
  color: #7F8368;
}

.sd-text-item:active .sd-text-item-title {
  background-color: #FFF5F8;
}

/* .sd-text-item.sd-selected { */
  /* border: 2px solid #8EB4DA; */
  /* background-color: #f0f8ff; */
/* } */

.sd-text-item:selected .sd-text-item-title {
  background-color: #FFF5F8;
}

/* .sd-text-item.sd-selected:hover { */
  /* background-color: inherit; */
/* } */

/* .sd-text-item.sd-selected .sd-text-item-content A { */
  /* color: #465C94 !important; */
/* } */

.sd-more, .sd-less {
  float: right;
  font-size: 85%;
  padding-top: 3px;
  color: #999;
}

.sd-more:hover, .sd-less:hover {
  color: #123;
  cursor: pointer;
}

A.sd-text-item-title {
  position: absolute;
  top: -12px;
  background-color: white;
  padding: 2px 8px 2px 8px;
  display: block;
  text-decoration: none;
  color: #2D5C8B;
  border-radius: 6px;
}

A.sd-text-item-title:hover {
  color: #4A8BCC;
}

.sd-text-item:hover .sd-text-item-close,
.sd-text-item.sd-selected .sd-text-item-close {
  display: block;
  opacity: 1;
}

.sd-text-item.sd-dragging:hover .sd-text-item-close,
.sd-text-item.sd-selected.sd-dragging .sd-text-item-close {
  display: none;
  opacity: 0;
}

.sd-text-item-close {
  position: absolute;
  top: -8px;
  right: -6px;
  background-color: white;
  padding: 5px 4px 5px 5px;
  display: none;
  text-decoration: none;
  border: 1px solid silver;
  border-radius: 12px;
  line-height: 7px;
  box-shadow: 1px 1px 1px 0 rgba(50, 50, 50, 0.75);
  transition: all 200ms;
}

.sd-text-item-close,
.sd-text-item-close:visited {
  color: grey !important;
}

.sd-text-item-close:hover {
  color: black;
  background-color: #ececec;
}

.sd-text-item-close:active {
  background-color: #eee;
}
/* ... */

